added many tiny changes plus license change

--- a/.project.vimrc.sample
+++ b/.project.vimrc.sample
@@ -1,112 +1,112 @@
 "opencv-2.4
-if filereadable("/home/hum/Projects/opencv-2.4/src/modules/tags")
-  set tags+=/home/hum/Projects/opencv-2.4/src/modules/tags
+if filereadable("$HOME/Projects/opencv-2.4/src/modules/tags")
+  set tags+=$HOME/Projects/opencv-2.4/src/modules/tags
 endif
 
-if filereadable("/home/hum/Projects/opencv-2.4/src/modules/cscope.out")
+if filereadable("$HOME/Projects/opencv-2.4/src/modules/cscope.out")
   set nocsverb
-  cs add /home/hum/Projects/opencv-2.4/src/modules/cscope.out
+  cs add $HOME/Projects/opencv-2.4/src/modules/cscope.out
   set csverb
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/calib3d/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/calib3d/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/calib3d/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/calib3d/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/core/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/core/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/core/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/core/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/features2d/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/features2d/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/features2d/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/features2d/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/gpu/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/gpu/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/gpu/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/gpu/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/imgproc/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/imgproc/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/imgproc/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/imgproc/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/legacy/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/legacy/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/legacy/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/legacy/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/nonfree/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/nonfree/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/nonfree/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/nonfree/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/ocl/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/ocl/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/ocl/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/ocl/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/python/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/python/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/python/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/python/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/stitching/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/stitching/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/stitching/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/stitching/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/ts/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/ts/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/ts/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/ts/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/videostab/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/videostab/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/videostab/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/videostab/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/world/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/world/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/world/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/world/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/androidcamera/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/androidcamera/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/androidcamera/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/androidcamera/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/contrib/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/contrib/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/contrib/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/contrib/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/dynamicuda/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/dynamicuda/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/dynamicuda/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/dynamicuda/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/flann/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/flann/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/flann/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/flann/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/highgui/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/highgui/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/highgui/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/highgui/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/java/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/java/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/java/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/java/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/ml/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/ml/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/ml/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/ml/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/objdetect/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/objdetect/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/objdetect/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/objdetect/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/photo/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/photo/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/photo/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/photo/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/superres/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/superres/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/superres/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/superres/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/video/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/video/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/video/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/video/include
 endif
 
-if isdirectory('/home/hum/Projects/opencv-2.4/src/modules/viz/include')
-  set path+=/home/hum/Projects/opencv-2.4/src/modules/viz/include
+if isdirectory('$HOME/Projects/opencv-2.4/src/modules/viz/include')
+  set path+=$HOME/Projects/opencv-2.4/src/modules/viz/include
 endif
 
 
@@ -141,17 +141,17 @@ if isdirectory('/usr/include/eigen3')
 endif
 
 "SSBA-4.0
-if filereadable("/home/hum/Projects/SSBA-4.0/src/tags")
-  set tags+=/home/hum/Projects/SSBA-4.0/src/tags
+if filereadable("$HOME/Projects/SSBA-4.0/src/tags")
+  set tags+=$HOME/Projects/SSBA-4.0/src/tags
 endif
 
-if filereadable("/home/hum/Projects/SSBA-4.0/src/cscope.out")
+if filereadable("$HOME/Projects/SSBA-4.0/src/cscope.out")
   set nocsverb
-  cs add /home/hum/Projects/SSBA-4.0/src/cscope.out
+  cs add $HOME/Projects/SSBA-4.0/src/cscope.out
   set csverb
 endif
 
-if isdirectory('/home/hum/Projects/SSBA-4.0/src')
-  set path+=/home/hum/Projects/SSBA-4.0/src
+if isdirectory('$HOME/Projects/SSBA-4.0/src')
+  set path+=$HOME/Projects/SSBA-4.0/src
 endif
 
